force/src/objects/Alert_Details__c.object
<CustomObject>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Alert</label>
        <referenceTo>Alerts__c</referenceTo>
        <relationshipLabel>Alert_Details</relationshipLabel>
        <relationshipName>Alert_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_ID__c</fullName>
        <defaultValue>&apos;All&apos;</defaultValue>
        <label>Division ID</label>
        <type>TextArea</type>
    </fields>
    <label>Alert Details</label>
    <nameField>
        <displayFormat>AD-{0}</displayFormat>
        <label>Alert Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert_Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>